--- a/css/styles.css
+++ b/css/styles.css
@@ -233,7 +233,7 @@ section {
   align-items: center;
   align-content: center;
   justify-content: center;
-  margin: 0;
+  margin: 5rem 0 0 0;
   min-height: 100vh;
 }
 .header-content .left-header {
@@ -242,11 +242,11 @@ section {
   justify-content: center;
   position: relative;
   padding: 1px;
-  margin: 2px;
+  margin: 3rem 0 0 0;
   width: 30vh;
   height: 30vh;
-  top: -200px;
-  left: 260px;
+  top: -270px;
+  left: 220px;
 }
 .header-content .left-header .h-shape {
   transition: all 0.4s ease-in-out;
@@ -260,6 +260,7 @@ section {
           clip-path: polygon(80% 50%, 56% 80%, 39% 40%, 50% 100%);
 }
 .header-content .left-header .image {
+  margin: 6rem 0 0 0;
   border-radius: 40px;
   border: 2px solid var(--color-secondary);
   position: relative;
@@ -333,7 +334,7 @@ section {
 }
 .right-header .name {
   text-align: center;
-  font-size: 3rem;
+  font-size: 4rem;
 }
 .right-header .name span {
   color: var(--color-secondary);
@@ -344,7 +345,7 @@ section {
 .right-header p {
   padding: 20px;
   text-align: center;
-  font-size: calc(2px + 1rem);
+  font-size: calc(1px + 1rem);
   margin: 1.5rem 0;
   line-height: 2rem;
 }
@@ -919,7 +920,7 @@ section {
 .main-title h2 {
   position: relative;
   text-transform: uppercase;
-  font-size: 4rem;
+  font-size: 5rem;
   font-weight: 700;
 }
 .main-title h2 span {
@@ -951,31 +952,34 @@ section {
     height: 50px;
   }
   .header-content {
+    margin: 1rem 0 0 0;
     display: flex;
     flex-direction: column-reverse;
     align-items: center;
     align-content: center;
     justify-content: center;
   }
-  .left-header {
-    display: none;
+  .header-content .left-header {
+    display: flex;
     align-items: center;
     justify-content: center;
+    height: 15vh;
+    width: 15vh;
   }
-  .left-header .h-shape {
+  .header-content .left-header .h-shape {
     display: none;
   }
-  .left-header .image {
+  .header-content .left-header .image {
     border-radius: 40px;
     right: 250px;
     top: 180px;
-    height: 50px;
-    width: 50px;
+    height: 15vh;
+    width: 15vh;
     margin: 0;
   }
-  .left-header .image img {
-    height: 50px;
-    width: 1em;
+  .header-content .left-header .image img {
+    height: 100%;
+    width: 100%;
     border-radius: 40px;
   }
   .right-header {
@@ -1124,30 +1128,42 @@ section {
     padding: 7rem 6rem;
     align-content: center;
   }
-  .about-container .left-about {
-    padding-right: 0rem;
+  .header-content {
+    display: flex;
+    flex-direction: column-reverse;
   }
-  .left-header .h-shape {
+  .header-content .left-header {
+    height: 25vh;
+    width: 25vh;
+    align-content: center;
+    justify-content: center;
+  }
+  .header-content .left-header .h-shape {
     display: none;
   }
-  .left-header .image {
+  .header-content .left-header .image {
+    align-items: center;
+    height: 25vh;
+    width: 25vh;
     top: 50px;
   }
   .right-header {
-    padding-right: 0rem !important;
     width: 90%;
     margin: 0;
   }
   .right-header .name {
-    font-size: 2.5rem !important;
+    font-size: 4rem;
     text-align: center;
-    padding-top: 3rem;
+    padding: 2rem;
   }
   .about-container {
     grid-template-columns: repeat(1, 1fr);
   }
   .about-container .right-about {
     padding-top: 2.5rem;
+  }
+  .about-container .left-about {
+    padding-right: 0rem;
   }
   .portfolios {
     overflow: wrap;
