--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -207,7 +207,7 @@ section {
   align-content: center;
  
   justify-content: center;
-  margin: 0;
+  margin: 5rem 0 0 0;
   min-height: 100vh;
   
   .left-header {
@@ -216,11 +216,11 @@ section {
       justify-content: center;
       position: relative;
       padding: 1px;
-      margin: 2px;
+      margin: 3rem 0 0 0;
       width:30vh;
       height:30vh;
-      top: -200px;
-      left: 260px;
+      top: -270px;
+      left: 220px;
       // -webkit-border-radius: 40px;
       // border-radius: 50%;
       
@@ -245,6 +245,7 @@ section {
           
       }
       .image {
+        margin: 6rem 0 0 0;
           border-radius: 40px;
           border: 2px solid var(--color-secondary);
           position: relative;
@@ -342,7 +343,7 @@ section {
       
       .name {
         text-align: center;
-          font-size: 3rem;
+          font-size: 4rem;
           span { color: var(--color-secondary); }
       }
       .headline {
@@ -353,7 +354,7 @@ section {
       p {
         padding: 20px;
         text-align: center;
-        font-size: calc(2px + 1rem);
+        font-size: calc(1px + 1rem);
         margin: 1.5rem 0;
         line-height: 2rem;
       }
@@ -966,7 +967,7 @@ section {
   h2 {
       position: relative;
       text-transform: uppercase;
-      font-size: 4rem;
+      font-size: 5rem;
       font-weight: 700;
       span { color: var(--color-secondary); }
       .bg-text {
