--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -3,7 +3,7 @@
   padding: 0;
   box-sizing: border-box;
   list-style: none;
-  transition: all 0.1s;
+  transition: all 0.2s ease;
 }
 
 :root {
@@ -38,14 +38,14 @@
   --color-grey-4: #454e56;
   --color-grey-5: #f8f8f8;
   --color-grey-6: #12181b;
-  --box-color-1: #a4a4a4;
-  --box-color-2: #ffffff7e;
+  --box-color-1: #dad9d9;
+  --box-color-2: #ededed7e;
 }
 
 body {
   background:
     var(--color-primary);
-  font-family: 'Comfortaa', cursive;
+    font-family: 'Exo 2', sans-serif;
   font-size: 1.1rem;
   color: var(--color-white);
   transition: all .4s ease-in-out;
@@ -155,8 +155,8 @@ section {
       justify-content: center;
       align-items: center;
       margin: .7rem 0;
-      box-shadow:  5px -3px 5px var(--box-color-1),
-                  -3px 5px 5px var(--box-color-2);
+      box-shadow:  -5px 5px 6px var(--box-color-1),
+      5px -5px 6px var(--box-color-2);
       
       i {
           font-size: 1.2rem;
@@ -186,8 +186,8 @@ section {
   display: flex;
   justify-content: center;
   align-items: center;
-  box-shadow: 6px -6px 15px var(--box-color-1),
-  -6px 6px 15px var(--box-color-2);
+  box-shadow:  -5px 5px 6px var(--box-color-1),
+      5px -5px 6px var(--box-color-2);
   transition: all .1s ease-in-out;
   &:active{ transform: translateY(-3px); }
   i{
@@ -199,6 +199,7 @@ section {
 
 
 
+
 /*Header-content*/
 .header-content {
   display: flex;
@@ -207,7 +208,7 @@ section {
   align-content: center;
  
   justify-content: center;
-  margin: 5rem 7rem 0 0;
+  margin: 5rem 10rem 0 0;
   min-height: 20vh;
   
   .left-header {
@@ -255,6 +256,8 @@ section {
           background-color: var(--color-black);
           transition: all 1s ease-in-out;
           transition: transform 1s;
+          box-shadow:  -5px 5px 6px var(--box-color-1),
+      5px -5px 6px var(--box-color-2);
           
           
           // Roll in animation
@@ -339,9 +342,18 @@ section {
       -webkit-border-radius: 50px;
       border-radius: 70px;
       // background: linear-gradient(45deg, #1b1b1b, #171717);
-      box-shadow:  8px 8px 16px var(--box-color-1),
-      -8px -8px 16px var(--box-color-2);
-      
+      box-shadow:  -5px 5px 6px var(--box-color-1),
+      5px -5px 6px var(--box-color-2);
+      &:hover {
+        transition: all 0.5s ease-in-out;
+        cursor: default;
+        transform: translateY(-5px);
+        border: 1px solid var(--color-secondary);
+        box-shadow: 12px -12px 24px var(--box-color-1),
+        -12px 12px 24px var(--box-color-2);
+        
+    }
+   
       .name {
         text-align: center;
           font-size: 4rem;
@@ -409,7 +421,7 @@ section {
                       top: 15px;
                       width: 2rem;
                       height: 2px;
-                      background-color: var(--color-grey-5);
+                      background-color: var(--color-grey-0);
                   }
               }
           }
@@ -893,20 +905,21 @@ section {
   display: flex;
   align-self: flex-start;
   align-items: center;
- 
+  margin: 1rem 0rem 0rem 0rem;
   overflow: hidden;
-  box-shadow:  8px 8px 16px var(--box-color-1),
-  -8px -8px 16px var(--box-color-2);
+  box-shadow:  -5px 5px 6px var(--box-color-1),
+      5px -5px 6px var(--box-color-2);
   .btn-text { padding: 0 2rem; }
   .btn-icon {
-      background-color: var(--color-secondary);
+    background-color: var(--color-secondary);
+    color: var(--color-primary);
       display: flex;
       align-items: center;
       justify-content: center;
       border-radius: 50%;
       padding: 1rem;
       &:hover {
-        
+       
       }
   }
   &::before {
@@ -932,43 +945,43 @@ section {
   }
 
 }
-.live-btn {
-  left: 10px;
-  margin: 2px;
-  border-radius: 40px;
-  color: inherit;
-  font-weight: 600;
-  position: relative;
-  border: 1px solid var(--color-secondary);
-  display: flex;
-  align-self: flex-start;
-  align-items: center;
-  overflow: hidden;
+// .live-btn {
+//   left: 10px;
+//   margin: 2px;
+//   border-radius: 40px;
+//   color: inherit;
+//   font-weight: 600;
+//   position: relative;
+//   border: 1px solid var(--color-secondary);
+//   display: flex;
+//   align-self: flex-start;
+//   align-items: center;
+//   overflow: hidden;
   
   
-  &:hover {
-    transition: all .8s ease;
-    filter: drop-shadow(1px 2px 5px var(--color-secondary)) ;
-   }
-  .btn-icon {
-      background-color: var(--color-secondary);
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      border-radius: 50%;
-      padding: 1rem;
-      margin: 1px;
+//   &:hover {
+//     transition: all .8s ease;
+//     filter: drop-shadow(1px 2px 5px var(--color-secondary)) ;
+//    }
+//   .btn-icon {
+//       background-color: var(--color-secondary);
+//       display: flex;
+//       align-items: center;
+//       justify-content: center;
+//       border-radius: 50%;
+//       padding: 1rem;
+//       margin: 1px;
     
-  }
+//   }
 
 
-}
+// }
 .main-title {
   text-align: center;
   h2 {
       position: relative;
       text-transform: uppercase;
-      font-size: 4rem;
+      font-size: 5rem;
       font-weight: 700;
       span { color: var(--color-secondary); }
       .bg-text {
