--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -93,12 +93,12 @@ section {
   position: absolute;
   left: 0;
   top: 0;
-  padding: 3rem 18rem;
+  padding: 1rem 2rem;
 }
 
 .container {
   display: none;
-  
+ 
   transform: translateY(-100%) scale(0);
   transition: all .4s ease-in-out;
   background:  var(--color-primary);
@@ -379,8 +379,8 @@ section {
 .about-container {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  padding-top: 3.5rem;
-  padding-bottom: 5rem;
+  padding-top: 2rem;
+  padding-bottom: 3rem;
   .right-about {
       display: grid;
       grid-template-columns: repeat(2, 1fr);
@@ -429,14 +429,15 @@ section {
   }
 
   .left-about {
-      padding-right: 5rem;
+      padding-right: 0rem;
       p {
-          line-height: 2rem;
+          line-height:2rem;
+          font-size: 1rem;
           padding: 1rem;
           color: var(--color-grey-1);
       }
       h4 {
-          font-size: 2rem;
+          font-size: 1.3rem;
           text-transform: uppercase;
       }
   }
@@ -554,7 +555,7 @@ section {
 
 //Portfolios
 .port-text {
-  padding: 2rem 0;
+  padding: 1rem 0;
   text-align: center;
   
 }
@@ -574,7 +575,7 @@ section {
   align-items: center;
   // transform: translateY(50%);
   grid-gap: 3rem;
-  margin-top: 3rem;
+  margin-top: 1rem;
   
   
   
@@ -773,6 +774,7 @@ section {
           text-transform: uppercase;
       }
       p {
+        text-align: center;
           margin: 1rem 0;
           line-height: 2rem;
       }
@@ -943,45 +945,13 @@ section {
           
       }
   }
-
 }
-// .live-btn {
-//   left: 10px;
-//   margin: 2px;
-//   border-radius: 40px;
-//   color: inherit;
-//   font-weight: 600;
-//   position: relative;
-//   border: 1px solid var(--color-secondary);
-//   display: flex;
-//   align-self: flex-start;
-//   align-items: center;
-//   overflow: hidden;
-  
-  
-//   &:hover {
-//     transition: all .8s ease;
-//     filter: drop-shadow(1px 2px 5px var(--color-secondary)) ;
-//    }
-//   .btn-icon {
-//       background-color: var(--color-secondary);
-//       display: flex;
-//       align-items: center;
-//       justify-content: center;
-//       border-radius: 50%;
-//       padding: 1rem;
-//       margin: 1px;
-    
-//   }
-
-
-// }
 .main-title {
   text-align: center;
   h2 {
       position: relative;
-      text-transform: uppercase;
-      font-size: 5rem;
+      text-transform: uppercas e;
+      font-size: 4rem;
       font-weight: 700;
       span { color: var(--color-secondary); }
       .bg-text {
@@ -993,7 +963,7 @@ section {
           z-index: -1;
           transform: translate(-50%, -50%);
           font-weight: 800;
-          font-size: 4.3rem;
+          font-size: 2.3rem;
           opacity: 0.01;
       }
   }
