--- a/css/styles.css
+++ b/css/styles.css
@@ -323,8 +323,8 @@ section {
 .right-header {
   padding: 0;
   display: flex;
-  width: 100vw;
-  height: 75vh;
+  width: 90vw;
+  height: 65vh;
   flex-direction: column;
   align-content: center;
   justify-content: center;
@@ -904,7 +904,7 @@ section {
 .main-title h2 {
   position: relative;
   text-transform: uppercase;
-  font-size: 4rem;
+  font-size: 5rem;
   font-weight: 700;
 }
 .main-title h2 span {
@@ -944,7 +944,7 @@ section {
     justify-content: center;
   }
   .header-content .left-header {
-    display: flex;
+    display: none;
     align-items: center;
     justify-content: center;
     height: 15vh;
@@ -957,6 +957,7 @@ section {
     border-radius: 40px;
     height: 15vh;
     width: 15vh;
+    display: none;
     margin: 0;
   }
   .header-content .left-header .image img {
@@ -968,14 +969,14 @@ section {
     align-items: center;
     justify-content: center;
     align-content: center;
-    height: 100%;
-    width: 100%;
+    height: 90vh;
+    width: 60vw;
     margin: 0;
   }
   .right-header .name {
-    font-size: 2.5rem !important;
+    font-size: 1.5rem !important;
     text-align: center;
-    padding-top: 3rem;
+    padding-top: 1rem;
   }
   .right-header p {
     font-size: 1rem;
@@ -1190,7 +1191,7 @@ section {
     margin-bottom: 6rem;
   }
   .main-title h2 {
-    font-size: 3rem;
+    font-size: 5rem;
   }
   .main-title h2 .bg-text {
     font-size: 2.5rem;
