--- a/styles/_media.scss
+++ b/styles/_media.scss
@@ -4,7 +4,7 @@
 
 //Up to 767px (Mobile)
 @media screen and (max-width: 767px) {
-    header{
+    header {
         padding: 0 !important;
     }
     .theme-btn{
@@ -23,7 +23,7 @@
   
   
     .left-header{
-        display: flex;
+        display: none;
         align-items: center;
         justify-content: center;
         height: 15vh;
@@ -37,7 +37,7 @@
             // top: 180px;
             height: 15vh;
           width: 15vh;
-        //   display: flex;
+          display: none;
         //   height: 100px;
         // width: 100px;
         margin: 0;
@@ -57,13 +57,13 @@
         align-content: center;
         // grid-row: 1;
         // padding-right: 10rem !important;
-        height: 100%;
-        width: 100%;
+        height: 90vh;
+        width: 60vw;
         margin: 0;
         .name{
-            font-size: 2.5rem !important;
+            font-size: 1.5rem !important;
             text-align: center;
-            padding-top: 3rem;
+            padding-top: 1rem;
         }
         p {
             font-size: 1rem;
@@ -361,7 +361,7 @@
   
     .main-title{
         h2{
-            font-size: 3rem;
+            font-size: 5rem;
             .bg-text{
                 font-size: 2.5rem;
             }
