--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -56,27 +56,41 @@ body::-webkit-scrollbar {
     width: 1em;
   }
    
-  body::-webkit-scrollbar-track {
+body::-webkit-scrollbar-track {
     box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
   }
    
-  body::-webkit-scrollbar-thumb {
+body::-webkit-scrollbar-thumb {
     background-color: var(--color-secondary);
     outline: 1px solid slategrey;
     border-radius: 10000px;
   }
 
-a {
-  display: inline-block;
-  text-decoration: none;
-  color: inherit;
-  font-family: inherit;
+  a {
+    display: inline-block;
+    text-decoration: none;
+    color: inherit;
+    font-family: inherit;
+  }
+
+@media screen and (0px <= width <= 425px) {
+      
+  }
   
-}
-.demo-link {
-  font-weight: 700;
-  color:rgba(255, 0, 0, 0.3);
-}
+@media screen and (426px <= width <= 768px){
+   
+  }
+  
+@media screen and (769px <= width <= 1024px) {
+    
+  }
+
+@media screen and (1025px <= width <= 4000px){
+   
+  }
+
+
+
 
 header {
   min-height: 100vh;
@@ -330,14 +344,15 @@ section {
   .right-header {
     padding: 0;
       display: flex;
-      width: 90vw;
+      width: 70vw;
       height: 65vh;
       flex-direction: column;
       align-content: center;
       justify-content: center;
+      margin: 5rem 5rem 1rem 5rem;
       // right: 520px;
       // left: 400px;
-      padding: 12rem;
+      padding: 3rem;
       
       -webkit-border-radius: 50px;
       border-radius: 70px;
@@ -355,8 +370,9 @@ section {
     }
    
       .name {
+        margin: 0;
         text-align: center;
-          font-size: 4rem;
+          font-size: 3rem;
           span { color: var(--color-secondary); }
       }
       .headline {
@@ -365,10 +381,10 @@ section {
 
       }
       p {
-        padding: 20px;
+        padding: 5px;
         text-align: center;
         font-size: calc(1px + 1rem);
-        margin: 1.5rem 0;
+        margin: 0rem 0;
         line-height: 2rem;
       }
       
@@ -905,13 +921,15 @@ section {
   position: relative;
   border: 1px solid var(--color-primary);
   display: flex;
-  align-self: flex-start;
+  align-self: center;
   align-items: center;
-  margin: 1rem 0rem 0rem 0rem;
+  margin: 3rem 0rem 3rem 12rem;
   overflow: hidden;
   box-shadow:  -5px 5px 6px var(--box-color-1),
       5px -5px 6px var(--box-color-2);
-  .btn-text { padding: 0 2rem; }
+  .btn-text { 
+    font-size: 1rem;
+    padding: 0 2rem; }
   .btn-icon {
     background-color: var(--color-secondary);
     color: var(--color-primary);
@@ -970,3 +988,4 @@ section {
 }
 
 @import './media';
+
