--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -4,6 +4,7 @@
   box-sizing: border-box;
   list-style: none;
   transition: all 0.2s ease;
+  font-family: 'Sono', sans-serif;
 }
 
 :root {
@@ -11,7 +12,7 @@
   --color-secondary: #59CBE8;
   --color-hover: #E93CAC;
   --color-white: #FFFFFF;
-  --color-black: #000;
+  --color-black: #000000
   --color-grey0: #f8f8f8;
   --color-grey-1: #dbe1e8;
   --color-grey-2: #b2becd;
@@ -45,7 +46,7 @@
 body {
   background:
     var(--color-primary);
-    font-family: 'Exo 2', sans-serif;
+  font-family: 'Sono', sans-serif;
   font-size: 1.1rem;
   color: var(--color-white);
   transition: all .4s ease-in-out;
@@ -342,6 +343,7 @@ section {
      }
   }
   .right-header {
+   
     padding: 0;
       display: flex;
       width: 70vw;
@@ -397,6 +399,7 @@ section {
   grid-template-columns: repeat(2, 1fr);
   padding-top: 2rem;
   padding-bottom: 3rem;
+  
   .right-about {
       display: grid;
       grid-template-columns: repeat(2, 1fr);
@@ -651,9 +654,9 @@ section {
               margin-bottom: 1.5rem;
             &:hover {
               
-              color: var(--color-primary);
-              text-shadow: 8px 8px 16px var(--box-color-1),
-              -8px -8px 16px var(--box-color-2);
+            cursor: pointer;
+              scale: 1.1;
+                color: var(--box-color-1);
             }
 
             
@@ -666,10 +669,11 @@ section {
               padding: 15px;
               font-weight: 800;
               &:hover {
-                color: var(--color-secondary);
-                -webkit-text-stroke: 1px var(--color-primary);
-                text-shadow: 8px 8px 16px var(--box-color-1),
-              -8px -8px 16px var(--box-color-2);
+                scale: 1.1;
+                color: var(--box-color-1);
+              //   -webkit-text-stroke: 1px var(--color-primary);
+              //   text-shadow: 8px 8px 16px var(--box-color-1),
+              // -8px -8px 16px var(--box-color-2);
               }
             }
           .icons {
@@ -780,7 +784,7 @@ section {
 //Contact section
 .contact-content-con {
   display: flex;
-  
+  margin: 2rem 7rem;
   padding-top: 3.5rem;
   .left-contact {
       flex: 2;
