--- a/css/styles.css
+++ b/css/styles.css
@@ -624,6 +624,40 @@ section {
   transform: scale(1);
 }
 
+.fa-container {
+  display: flex;
+  flex-direction: row;
+  gap: 2rem;
+  margin: 1rem 0rem;
+}
+
+.fa-react {
+  margin: 1rem 0rem 0rem 0rem;
+  scale: 1.5;
+  color: #fff;
+}
+.fa-react:hover {
+  color: var(--color-primary);
+}
+
+.fa-html5 {
+  margin: 1rem 0rem 0rem 0rem;
+  scale: 1.5;
+  color: #fff;
+}
+.fa-html5:hover {
+  color: var(--color-primary);
+}
+
+.fa-css3-alt {
+  margin: 1rem 0rem 0rem 0rem;
+  scale: 1.5;
+  color: #fff;
+}
+.fa-css3-alt:hover {
+  color: var(--color-primary);
+}
+
 .blogs {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
