fixed some ui margins on home page

--- a/css/styles.css
+++ b/css/styles.css
@@ -295,7 +295,7 @@ section {
   box-shadow: 12px -12px 24px var(--box-color-1), -12px 12px 24px var(--box-color-2);
 }
 .right-header .name {
-  margin: 0;
+  margin: 1rem 0rem 0rem 0rem;
   text-align: center;
   font-size: 3rem;
 }
@@ -309,7 +309,7 @@ section {
   padding: 5px;
   text-align: center;
   font-size: calc(1px + 1rem);
-  margin: 0rem 0;
+  margin: 0.7rem 2rem;
   line-height: 2rem;
 }
 
