--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -372,7 +372,7 @@ section {
     }
    
       .name {
-        margin: 0;
+        margin: 1rem 0rem 0rem 0rem;
         text-align: center;
           font-size: 3rem;
           span { color: var(--color-secondary); }
@@ -386,7 +386,7 @@ section {
         padding: 5px;
         text-align: center;
         font-size: calc(1px + 1rem);
-        margin: 0rem 0;
+        margin: 0.7rem 2rem;
         line-height: 2rem;
       }
       
