--- a/css/styles.css
+++ b/css/styles.css
@@ -204,7 +204,7 @@ section {
   min-height: 20vh;
 }
 .header-content .left-header {
-  display: flex;
+  display: none;
   align-items: center;
   justify-content: center;
   position: relative;
@@ -282,17 +282,14 @@ section {
   flex-direction: column;
   align-content: center;
   justify-content: center;
-  margin: 5rem 5rem 1rem 5rem;
+  margin: 5rem 1rem 1rem 1rem;
   padding: 3rem;
   border-radius: 70px;
-  box-shadow: -5px 5px 6px var(--box-color-1), 5px -5px 6px var(--box-color-2);
 }
 .right-header:hover {
   transition: all 0.5s ease-in-out;
   cursor: default;
   transform: translateY(-5px);
-  border: 1px solid var(--color-secondary);
-  box-shadow: 12px -12px 24px var(--box-color-1), -12px 12px 24px var(--box-color-2);
 }
 .right-header .name {
   margin: 4rem 0rem 0rem 0rem;
@@ -637,6 +634,15 @@ section {
   color: #fff;
 }
 .fa-react:hover {
+  color: var(--color-primary);
+}
+
+.fa-python {
+  margin: 1rem 0rem 0rem 0rem;
+  scale: 1.5;
+  color: #fff;
+}
+.fa-python:hover {
   color: var(--color-primary);
 }
 
