--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -227,7 +227,7 @@ section {
   min-height: 20vh;
   
   .left-header {
-      display: flex;
+      display: none;
       align-items: center;
       justify-content: center;
       position: relative;
@@ -351,7 +351,7 @@ section {
       flex-direction: column;
       align-content: center;
       justify-content: center;
-      margin: 5rem 5rem 1rem 5rem;
+      margin: 5rem 1rem 1rem 1rem;
       // right: 520px;
       // left: 400px;
       padding: 3rem;
@@ -359,15 +359,15 @@ section {
       -webkit-border-radius: 50px;
       border-radius: 70px;
       // background: linear-gradient(45deg, #1b1b1b, #171717);
-      box-shadow:  -5px 5px 6px var(--box-color-1),
-      5px -5px 6px var(--box-color-2);
+      // box-shadow:  -5px 5px 6px var(--box-color-1),
+      // 5px -5px 6px var(--box-color-2);
       &:hover {
         transition: all 0.5s ease-in-out;
         cursor: default;
         transform: translateY(-5px);
-        border: 1px solid var(--color-secondary);
-        box-shadow: 12px -12px 24px var(--box-color-1),
-        -12px 12px 24px var(--box-color-2);
+        // border: 1px solid var(--color-secondary);
+        // box-shadow: 12px -12px 24px var(--box-color-1),
+        // -12px 12px 24px var(--box-color-2);
         
     }
    
@@ -722,6 +722,15 @@ section {
 }
 
 .fa-react  {
+  margin: 1rem 0rem 0rem 0rem;
+  scale: 1.5;
+  color: #fff;
+  &:hover {
+    color: var(--color-primary);
+  }
+}
+
+.fa-python  {
   margin: 1rem 0rem 0rem 0rem;
   scale: 1.5;
   color: #fff;
