--- a/styles/_media.scss
+++ b/styles/_media.scss
@@ -131,29 +131,50 @@
             justify-content: center;
             justify-items: center;
             justify-self: center;
-            
-                &:hover {
-            //         box-shadow: 8px 8px 16px var(--box-color-1),
-            //   -8px -8px 16px var(--box-color-2);
-                }
+            .portfolio-item:hover .hover-items {
+                opacity: 1;
+                // transform: scale(0);   
+            }
             img {
                 width: 20vh;
                 height: 20vh;
+                &:hover {
+                
+                    width: 20vh;
+                    height: 20vh;
+                    }
             }
-            &:hover {
-            //     box-shadow: 8px 8px 16px var(--box-color-1),
-            //   -8px -8px 16px var(--box-color-2);
-            }
+           
     }
 
     .hover-items {
         width: 20vh !important;
-        height: 20vh;
+        height: 20vh !important;
         align-items: center;
         align-content: center;
         justify-content: center;
         justify-items: center;
-
+        h3 {
+            font-size: 0.8rem !important;
+            word-wrap: normal;
+            text-align: center;
+            justify-content: center;
+            color: var(--color-primary);
+            margin-bottom: 1.5rem;
+        
+          &:hover {
+            
+          cursor: pointer;
+            scale: 1.0;
+              color: var(--box-color-1);
+          }}
+          &:hover {
+         
+            width: 20vh;
+            height: 20vh;
+            }
+            
+    
     }
 
    
