fixes responsiveness bugs

--- a/css/styles.css
+++ b/css/styles.css
@@ -141,7 +141,6 @@ section {
   padding: 3rem;
   justify-content: center;
   text-align: center;
-  margin: 4rem 1rem 0rem 1rem;
   min-height: 30vh;
   border-radius: 15px;
   background-color: var(--header-background);
@@ -161,15 +160,14 @@ section {
   padding: 5px;
   text-align: center;
   font-size: calc(1px + 1rem);
-  margin: 0.7rem 2rem;
+  margin: 0.7rem 4rem;
   line-height: 2rem;
 }
 
 .footer-bottom {
-  margin: 2rem 0rem;
+  margin: 3rem 0rem;
   text-align: center;
-  padding-top: 2rem;
-  font-size: 1rem;
+  font-size: 0.7rem;
 }
 
 .about-container {
@@ -862,51 +860,18 @@ section {
     height: 50px;
   }
   .header-content {
-    margin: 1rem 0 0 0;
+    margin: 3rem 0 0 0;
     display: flex;
     flex-direction: column;
     align-items: center;
     align-content: center;
     justify-content: center;
   }
-  .header-content .left-header {
+  .header-content p {
+    margin: 0.7rem 0.5rem !important;
+  }
+  .footer-bottom {
     display: none;
-    align-items: center;
-    justify-content: center;
-    height: 15vh;
-    width: 15vh;
-  }
-  .header-content .left-header .h-shape {
-    display: none;
-  }
-  .header-content .left-header .image {
-    border-radius: 40px;
-    height: 15vh;
-    width: 15vh;
-    display: none;
-    margin: 0;
-  }
-  .header-content .left-header .image img {
-    height: 100%;
-    width: 100%;
-    border-radius: 40px;
-  }
-  .right-header {
-    align-items: center;
-    justify-content: center;
-    align-content: center;
-    height: 60vh;
-    width: 50vw;
-    margin: 1rem 0rem 1rem 0rem;
-  }
-  .right-header .name {
-    font-size: 2.5rem;
-    text-align: center;
-    padding-top: 1rem;
-  }
-  .right-header p {
-    display: none;
-    font-size: 1.5rem;
   }
   .header-content .left-header .image {
     margin: 0 auto;
@@ -1059,7 +1024,7 @@ section {
   .main-btn {
     justify-content: center;
     align-content: center;
-    margin: 4rem 0rem 0rem 0rem;
+    margin: 1rem 0rem 0rem 0rem;
   }
 }
 @media screen and (min-width: 768px) and (max-width: 1150px) {
@@ -1069,28 +1034,11 @@ section {
     padding: 2rem 7rem;
     align-content: center;
   }
-  .header-content .left-header {
-    height: 15vh;
-    width: 15vh;
-    align-content: center;
-    justify-content: center;
+  .header-content {
+    margin: 4.5rem 0 0 0;
   }
-  .header-content .left-header .h-shape {
-    display: none;
-  }
-  .header-content .left-header .image {
-    align-items: center;
-    height: 15vh;
-    width: 15vh;
-  }
-  .right-header {
-    width: 90%;
-    margin: 0;
-  }
-  .right-header .name {
-    font-size: 3rem;
-    text-align: center;
-    padding: 2rem;
+  .header-content p {
+    margin: 0.7rem 2.5rem !important;
   }
   .about-container {
     grid-template-columns: repeat(1, 1fr);
@@ -1122,8 +1070,11 @@ section {
   }
 }
 @media screen and (min-width: 1151px) {
-  h1 {
-    margin: 1rem 1rem 1rem 1rem;
+  .header-content {
+    margin: 8rem 0 0 0;
+  }
+  .header-content p {
+    margin: 0.7rem 8.5rem !important;
   }
   .blogs {
     grid-template-columns: repeat(2, 1fr);
