--- a/styles/_media.scss
+++ b/styles/_media.scss
@@ -1,7 +1,3 @@
-// .about-container .left-about p{
-//   padding-left: 0;
-// }
-
 //Up to 767px (Mobile)
 @media screen and (max-width: 767px) {
     header {
@@ -12,64 +8,22 @@
         height: 50px;
     }
     .header-content{
-        margin: 1rem 0 0 0;
+        margin: 3rem 0 0 0;
         display: flex;
         flex-direction: column;
         // padding-bottom: 6rem;
         align-items: center;
         align-content: center;
         justify-content: center;
-        
-  
-  
-    .left-header{
-        display: none;
-        align-items: center;
-        justify-content: center;
-        height: 15vh;
-          width: 15vh;
-        .h-shape{
-            display: none;
-        }
-        .image {
-            border-radius: 40px;
-            // right: 250px;
-            // top: 180px;
-            height: 15vh;
-          width: 15vh;
-          display: none;
-        //   height: 100px;
-        // width: 100px;
-        margin: 0;
-        // top: 200px;
-        img {
-            height: 100%;
-          width: 100%;
-            border-radius: 40px;
-        }
-        }
-    }
-    }
-    .right-header{
-
-        align-items: center;
-        justify-content: center;
-        align-content: center;
-        // grid-row: 1;
-        // padding-right: 10rem !important;
-        height: 60vh;
-        width: 50vw;
-        margin: 1rem 0rem 1rem 0rem;
-        .name{
-            font-size: 2.5rem ;
-            text-align: center;
-            padding-top: 1rem;
-        }
         p {
-            display: none;
-            font-size: 1.5rem;
-        }
+            margin: 0.7rem 0.5rem !important;
+          }
     }
+    .footer-bottom {
+        display: none;
+       
+      }
+ 
     .header-content .left-header .image{
         margin: 0 auto;
         width: 90%;
@@ -184,7 +138,7 @@
         grid-template-columns: repeat(1, 1fr);
         padding-bottom: 6rem;
     }
-  
+
     .contact-content-con{
         flex-direction: column;
         .right-contact{
@@ -200,11 +154,9 @@
         margin-left: 0;
         margin-top: 1.5rem;
     }
-  
     .contact-content-con .right-contact{
         margin-bottom: 6rem;
     }
-
     .contact-content-con {
        
         .left-contact {
@@ -251,17 +203,13 @@
             }
         }
     }
-
     .main-btn {
         justify-content: center;
         align-content: center;
-        margin: 4rem 0rem 0rem 0rem;
+        margin: 1rem 0rem 0rem 0rem;
        
     }
-  
-    // .image {
-    //   display: none;
-    // }
+
 }
 //Between 768 - 1650 (Tablet)
 @media screen and (min-width: 768px) and (max-width: 1150px) {
@@ -274,40 +222,10 @@
     }
 
 .header-content{
-       
-        // align-items: center;
-        // justify-content: center;
-        // padding-bottom: 6rem;
-    .left-header{
-        
-        height: 15vh;
-          width: 15vh;
-          align-content: center;
-          justify-content: center;
-        .h-shape{
-            display: none;
-        }
-        .image {
-            
-            align-items: center;
-            height: 15vh;
-          width: 15vh;
-         
-        }
-        
-    }
-    }
-
-.right-header{
-        
-        // padding-right: 0rem !important;
-        width: 90%;
-        margin: 0;
-        .name{
-            font-size: 3rem;
-            text-align: center;
-            padding: 2rem;
-        }
+    margin: 4.5rem 0 0 0;
+    p {
+        margin: 0.7rem 2.5rem !important;
+      }
     }
 
 .about-container{
@@ -346,16 +264,22 @@
 }
 //Greater than 1651 (Desktop)
 @media screen and (min-width: 1151px) {
-    h1 {
-        margin: 1rem 1rem 1rem 1rem;
-    }
+    // h1 {
+    //     margin: 1rem 1rem 1rem 1rem;
+    // }
     
+
+    .header-content{
+        margin: 8rem 0 0 0;
+        p {
+            margin: 0.7rem 8.5rem !important;
+          }
+        }
     .blogs{
         grid-template-columns: repeat(2, 1fr);
         margin-top: 6rem;
     }
     
-
     .about-container{
         grid-template-columns: repeat(1, 1fr);
         .right-about{
@@ -363,7 +287,6 @@
         }
     }
 
- 
     .container{
         padding: 2rem 9rem;
     }
@@ -398,19 +321,3 @@
         }
     }
 }
-
-// @media screen and (0px <= width <= 425px) {
-      
-// }
-
-// @media screen and (426px <= width <= 768px){
- 
-// }
-
-// @media screen and (769px <= width <= 1024px) {
-  
-// }
-
-// @media screen and (1025px <= width <= 4000px){
- 
-// }
