--- a/styles/_media.scss
+++ b/styles/_media.scss
@@ -212,7 +212,7 @@
 
 }
 //Between 768 - 1650 (Tablet)
-@media screen and (min-width: 768px) and (max-width: 1150px) {
+@media screen and (min-width: 768px) and (max-width: 1440px) {
 .container{
     display: flex;
     flex-direction: column;
@@ -222,11 +222,16 @@
     }
 
 .header-content{
-    margin: 4.5rem 0 0 0;
+    margin: 8rem 0 0 0;
     p {
         margin: 0.7rem 2.5rem !important;
       }
     }
+
+    .footer-bottom {
+        display: none;
+       
+      }
 
 .about-container{
         grid-template-columns: repeat(1, 1fr);
@@ -263,14 +268,14 @@
     }
 }
 //Greater than 1651 (Desktop)
-@media screen and (min-width: 1151px) {
+@media screen and (min-width: 1441px) {
     // h1 {
     //     margin: 1rem 1rem 1rem 1rem;
     // }
     
 
     .header-content{
-        margin: 8rem 0 0 0;
+        margin: 10rem 0 0 0;
         p {
             margin: 0.7rem 8.5rem !important;
           }
