--- a/styles/_media.scss
+++ b/styles/_media.scss
@@ -8,21 +8,21 @@
         height: 50px;
     }
     .header-content{
-        margin: 3rem 0 0 0;
+        margin: 6rem 0 0 0;
         display: flex;
         flex-direction: column;
-        // padding-bottom: 6rem;
+     
         align-items: center;
         align-content: center;
         justify-content: center;
+        .name {
+            font-size: 2rem;
+        }
         p {
             margin: 0.7rem 0.5rem !important;
           }
     }
-    .footer-bottom {
-        display: none;
-       
-      }
+ 
  
     .header-content .left-header .image{
         margin: 0 auto;
@@ -228,10 +228,7 @@
       }
     }
 
-    .footer-bottom {
-        display: none;
-       
-      }
+  
 
 .about-container{
         grid-template-columns: repeat(1, 1fr);
