--- a/css/styles.css
+++ b/css/styles.css
@@ -4,7 +4,7 @@
   box-sizing: border-box;
   list-style: none;
   transition: all 0.2s ease;
-  font-family: "Sono", sans-serif;
+  font-family: "Silkscreen", sans-serif;
 }
 
 :root {
@@ -1041,7 +1041,7 @@ section {
     align-content: center;
   }
   .header-content {
-    margin: 7.5rem 0 0 0;
+    margin: 5.8rem 0 0 0;
   }
   .header-content p {
     margin: 0.7rem 2.5rem !important;
@@ -1077,7 +1077,7 @@ section {
 }
 @media screen and (min-width: 1441px) {
   .header-content {
-    margin: 10rem 0 0 0;
+    margin: 9rem 0 0 0;
   }
   .header-content p {
     margin: 0.7rem 8.5rem !important;
