--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -4,7 +4,9 @@
   box-sizing: border-box;
   list-style: none;
   transition: all 0.2s ease;
-  font-family: 'Sono', sans-serif;
+  // font-family: 'Sono', sans-serif;
+  font-family: 'Silkscreen', sans-serif;
+
 }
 
 // Color Key
