--- a/css/styles.css
+++ b/css/styles.css
@@ -144,7 +144,7 @@ section {
   min-height: 30vh;
   border-radius: 15px;
   background-color: var(--header-background);
-  -ms-overflow-style: none; /* Internet Explorer 10+ */
+  -ms-overflow-style: none;
   scrollbar-width: none;
 }
 .header-content .name {
@@ -857,7 +857,7 @@ section {
   z-index: -2;
 }
 
-@media screen and (max-width: 425px) {
+@media screen and (max-width: 480px) {
   header {
     padding: 0 !important;
   }
@@ -866,7 +866,7 @@ section {
     height: 50px;
   }
   .header-content {
-    margin: 3rem 0 0 0;
+    margin: 4rem 0 0 0;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -1033,7 +1033,7 @@ section {
     margin: 1rem 0rem 0rem 0rem;
   }
 }
-@media screen and (min-width: 426px) and (max-width: 1024px) {
+@media screen and (min-width: 481px) and (max-width: 1024px) {
   .container {
     display: flex;
     flex-direction: column;
@@ -1041,7 +1041,7 @@ section {
     align-content: center;
   }
   .header-content {
-    margin: 4.8rem 0 0 0;
+    margin: 6.5rem 0 0 0;
   }
   .header-content p {
     margin: 0.7rem 2.5rem !important;
@@ -1077,7 +1077,7 @@ section {
 }
 @media screen and (min-width: 1025px) {
   .header-content {
-    margin: 7rem 0 0 0;
+    margin: 9.5rem 0 0 0;
   }
   .header-content p {
     margin: 0.7rem 8.5rem !important;
