--- a/styles/_media.scss
+++ b/styles/_media.scss
@@ -1,5 +1,5 @@
 //Up to 767px (Mobile)
-@media screen and (max-width: 425px) {
+@media screen and (max-width: 480px) {
     header {
         padding: 0 !important;
     }
@@ -8,10 +8,9 @@
         height: 50px;
     }
     .header-content{
-        margin: 3rem 0 0 0;
+        margin: 4rem 0 0 0;
         display: flex;
         flex-direction: column;
-     
         align-items: center;
         align-content: center;
         justify-content: center;
@@ -211,8 +210,8 @@
     }
 
 }
-//Between 768 - 1440 (Tablet)
-@media screen and (min-width: 426px) and (max-width: 1024px) {
+//Between 768 - 1440 (Tablet/laptop)
+@media screen and (min-width: 481px) and (max-width: 1024px) {
     .container{
         display: flex;
         flex-direction: column;
@@ -222,13 +221,11 @@
         }
 
     .header-content{
-        margin: 4.8rem 0 0 0;
+        margin: 6.5rem 0 0 0;
         p {
             margin: 0.7rem 2.5rem !important;
         }
         }
-
-    
 
     .about-container{
             grid-template-columns: repeat(1, 1fr);
@@ -268,7 +265,7 @@
 @media screen and (min-width: 1025px) {  
 
     .header-content{
-        margin: 7rem 0 0 0;
+        margin: 9.5rem 0 0 0;
         p {
             margin: 0.7rem 8.5rem !important;
           }
