--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -58,6 +58,7 @@ body {
   color: var(--color-white);
   transition: all .4s ease-in-out;
   overflow: auto;
+  margin: 0 auto;
 }
 
 body::-webkit-scrollbar {
