--- a/css/styles.css
+++ b/css/styles.css
@@ -139,9 +139,10 @@ section {
   flex-direction: column;
   z-index: 2;
   align-items: center;
-  padding: 3rem;
+  padding: 1rem;
   justify-content: center;
   text-align: center;
+  transform: translate(0, 50%);
   min-height: 30vh;
   border-radius: 15px;
   background-color: var(--header-background);
@@ -867,7 +868,8 @@ section {
     height: 50px;
   }
   .header-content {
-    margin: 4rem 0 0 0;
+    margin: 3rem 0 0 0 !important;
+    transform: translate(0, 0);
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -1038,11 +1040,8 @@ section {
   .container {
     display: flex;
     flex-direction: column;
-    padding: 2rem 7rem;
+    padding: 0rem 2rem;
     align-content: center;
-  }
-  .header-content {
-    margin: 6.5rem 0 0 0;
   }
   .header-content p {
     margin: 0.7rem 2.5rem !important;
@@ -1077,9 +1076,6 @@ section {
   }
 }
 @media screen and (min-width: 1260px) {
-  .header-content {
-    margin: 10.5rem 0 0 0;
-  }
   .header-content p {
     margin: 0.7rem 8.5rem !important;
   }
