--- a/styles/_media.scss
+++ b/styles/_media.scss
@@ -8,7 +8,8 @@
         height: 50px;
     }
     .header-content{
-        margin: 4rem 0 0 0;
+        margin: 3rem 0 0 0 !important;
+        transform: translate(0, 0);
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -215,13 +216,13 @@
     .container{
         display: flex;
         flex-direction: column;
-            padding: 2rem 7rem;
+            padding: 0rem 2rem;
             align-content: center;
             
         }
 
     .header-content{
-        margin: 6.5rem 0 0 0;
+       
         p {
             margin: 0.7rem 2.5rem !important;
         }
@@ -265,7 +266,7 @@
 @media screen and (min-width: 1260px) {  
 
     .header-content{
-        margin: 10.5rem 0 0 0;
+        
         p {
             margin: 0.7rem 8.5rem !important;
           }
