--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -139,10 +139,10 @@ section {
   flex-direction: column;
   z-index: 2;
   align-items: center;
-  padding: 3rem;
+  padding: 1rem;
   justify-content: center;
   text-align: center;
-  // margin: 8rem 1rem 0rem 1rem;
+  transform: translate(0, 50%);
   min-height: 30vh;
   border-radius: 15px;
   background-color: var(--header-background);
