--- a/styles/_media.scss
+++ b/styles/_media.scss
@@ -8,8 +8,8 @@
         height: 50px;
     }
     .header-content{
-        margin: 3rem 0 0 0 !important;
-        transform: translate(0, 0);
+        margin: 4rem 0 0 0 !important;
+        transform: translate(0, 0) !important;
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -216,15 +216,15 @@
     .container{
         display: flex;
         flex-direction: column;
-            padding: 0rem 2rem;
+            padding: 0rem 1rem;
             align-content: center;
             
         }
 
     .header-content{
-       
+        transform: translate(0, 25%) !important;
         p {
-            margin: 0.7rem 2.5rem !important;
+            margin: 0.7rem 1.5rem !important;
         }
         }
 
