--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -146,8 +146,8 @@ section {
   min-height: 30vh;
   border-radius: 15px;
   background-color: var(--header-background);
-  -ms-overflow-style: none; 
-  scrollbar-width: none;
+  // -ms-overflow-style: none; 
+  // scrollbar-width: none;
   .name {
     margin: 0;
     text-align: center;
@@ -170,9 +170,9 @@ section {
   }
 }
 
-.container::-webkit-scrollbar { 
-  display: none;  /* Safari and Chrome */
-}
+// .container::-webkit-scrollbar { 
+//   display: none;  /* Safari and Chrome */
+// }
 
 
 .footer-bottom {
